# agent-bar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  PRODUCT.md  README.md  biome.json  build.rs  install.sh  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: publish.yml
assets/omarchy/: Widget.qml  manifest.json
docs/: README.md  architecture.md  commands.md  integration.md  json-output.md  new-provider.md  omarchy-shell.md  releasing.md  runtime.md  troubleshooting.md  waybar-contract.md
docs/adr/: 0001-omarchy-right-click-settings.md  0002-config-cli-dual-write.md  0003-cli-help-hide-internals.md  README.md
docs/superpowers/: rust-rewrite-resume.md
packaging/aur/: .SRCINFO  PKGBUILD  agent-bar-bin.install
rust/: Cargo.toml
rust/src/: action_right.rs  app_identity.rs  cli.rs  config.rs  doctor.rs  http.rs  lib.rs  main.rs  notify.rs  settings.rs  setup.rs  theme.rs  uninstall.rs  waybar_contract.rs  waybar_integration.rs
rust/src/formatters/: codex_helpers.rs  mod.rs  segments.rs  shared.rs  terminal.rs  view_model.rs
rust/src/formatters/builders/: amp.rs  claude.rs  generic.rs  mod.rs
rust/src/providers/: amp.rs  base.rs  claude.rs  codex.rs  mod.rs  types.rs
rust/src/tui/: action.rs  event_loop.rs  mod.rs  state.rs  update.rs
rust/src/tui/render/: dashboard.rs  detail.rs  history.rs  mod.rs  status_bar.rs
rust/src/tui/render/snapshots/: agent_bar__tui__render__config__tests__config_snapshot.snap  agent_bar__tui__render__detail__tests__detail_renders_provider_windows_and_models.snap  agent_bar__tui__render__detail__tests__detail_renders_with_real_cost.snap  agent_bar__tui__render__history__tests__history_renders_wide_160.snap  agent_bar__tui__render__history__tests__history_snapshot_three_days.snap  agent_bar__tui__render__tests__dashboard_renders_providers_table.snap  agent_bar__tui__render__tests__dashboard_renders_with_real_cost.snap  agent_bar__tui__render__tests__help_overlay_renders_snapshot.snap
rust/src/tui/widgets/: provider_list.rs  sparkline.rs
rust/src/usage/: amp.rs  cache.rs  claude.rs  codex.rs  mod.rs  pricing.rs
rust/tests/: golden.rs
scripts/: agent-bar  agent-bar-omarchy  agent-bar-omarchy-open-terminal  agent-bar-open-terminal  bun-publish-with-npm-token  check-version
src/: action-right.ts  action_right.rs  app-identity.ts  app_identity.rs  cache.rs  cache.ts  cli.rs  cli.ts  config.rs  config.ts  config_cmd.rs  copilot-cli.ts  doctor.rs  doctor.ts  index.ts  install.rs  install.ts  lib.rs  logger.rs  main.rs  menu.ts  notify.rs  notify.ts  omarchy_integration.rs  platform.rs  refresh.ts  runtime.rs  runtime.ts  settings.rs  settings.ts  setup.rs  setup.ts  term_prompt.rs  test_support.rs  theme.rs  theme.ts  uninstall.rs  uninstall.ts  update.rs  update.ts  (+6 more)
src/formatters/: clock.rs  codex-helpers.ts  codex_helpers.rs  json.rs  json.ts  mod.rs  render-ansi.ts  render-pango.ts  render_ansi.rs  render_pango.rs  segments.rs  segments.ts  shared.rs  shared.ts  terminal.rs  terminal.ts  view-model.ts  view_model.rs  waybar.rs  waybar.ts
src/providers/: amp.rs  amp.ts  amp_cli.rs  base.rs  base.ts  claude.rs  claude.ts  codex.rs  codex.ts  copilot.ts  error.rs  extras.rs  extras.ts  grok.rs  grok_cli.rs  index.ts  mod.rs  types.rs  types.ts
src/snapshots/: agent_bar__omarchy_integration__tests__omarchy_manifest.snap
src/tui/: action.rs  configure-layout.ts  configure-models.ts  effects.rs  event_loop.rs  fetch.rs  index.ts  list-all.ts  login-single.ts  login.ts  login_spawn.rs  login_state.rs  mod.rs  mouse.rs  render-colorize.ts  state.rs  terminal-ui.ts  theme_bridge.rs  update.rs
src/usage/: amp.rs  buckets.rs  cache.rs  claude.rs  codex.rs  mod.rs  (+2 more)
tests/: app-identity.test.ts  cache.test.ts  cli.rs  cli.test.ts  copilot-cli.test.ts  doctor.test.ts  formatters-json.test.ts  formatters-segments.test.ts  formatters-snapshot.test.ts  formatters.test.ts  golden.rs  notify.test.ts  package.test.ts  runtime.test.ts  settings.test.ts  setup.test.ts  theme.test.ts  update.test.ts  watch.test.ts  waybar-contract.test.ts  waybar-integration.test.ts
(+188 files in other folders)
