[package]
name = "agent-bar"
version = "8.2.0"
edition = "2021"
# 1.88: piso real, não 1.80 — tachyonfx (via anpa) exige 1.82.
rust-version = "1.88"
license = "MIT"
description = "LLM quota monitor for Waybar - Claude, Codex, Amp, Grok"
repository = "https://github.com/othavi0/agent-bar"

[[bin]]
name = "agent-bar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "serde-well-known", "local-offset", "formatting", "parsing", "macros"] } # usado a partir do Plano 02 (local-offset p/ formatResetTime)
redb = "2.6.3"
postcard = { version = "1.1.3", features = ["alloc"] }
tempfile = "3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros", "time", "process", "io-util", "io-std", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.30.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-input = "0.15.3"
throbber-widgets-tui = "0.11.1"
tokio-util = { version = "0.7", features = ["rt"] }
tachyonfx = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
temp-env = { version = "0.3", features = ["async_closure"] }
insta = { version = "1", features = ["filters"] }
wiremock = "0.6"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
filetime = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# cargo-binstall puxa o binário direto do GitHub Release (sem crates.io).
# O tarball tem `agent-bar` na raiz do arquivo (ver .github/workflows/publish.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/agent-bar-{ version }-x86_64.tar.gz"
pkg-fmt = "tgz"
bin-dir = "agent-bar"
