[package]
name = "agent-bar"
version = "6.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "LLM quota monitor for Waybar - Claude, Codex, Amp"

[[bin]]
name = "agent-bar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde-well-known", "local-offset", "formatting", "parsing"] } # usado a partir do Plano 02 (local-offset p/ formatResetTime)
tempfile = "3"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
temp-env = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
