[package]
name = "agent-bar"
version = "6.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "LLM quota monitor for Waybar - Claude, Codex, Amp"

[[bin]]
name = "agent-bar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde-well-known", "local-offset", "formatting", "parsing", "macros"] } # usado a partir do Plano 02 (local-offset p/ formatResetTime)
tempfile = "3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros", "time", "process", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.30.2"
tui-input = "0.15.3"
throbber-widgets-tui = "0.11.1"
tui-popup = "0.7.6"
tachyonfx = "0.25.0"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
temp-env = { version = "0.3", features = ["async_closure"] }
insta = { version = "1", features = ["filters"] }
wiremock = "0.6"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
filetime = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
